unpackaged/objects/WorkIt2__Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>WorkIt2__Advanced_Sessions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced Session Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkIt2__AutoContext__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic Context Based Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Missing_Context_HB__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Advanced: Missing Context HB</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__New_Session_Button__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Manual Session Switching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Stop_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Timer Control</label>
        <type>Checkbox</type>
    </fields>
    <label>WorkIt! Settings</label>
</CustomObject>